Try fixing the flipping issue by create async function speeds up setting matrices.

--- a/integrations/esri-sceneview-wasm/New-Esri-Demo/esri-demo.html
+++ b/integrations/esri-sceneview-wasm/New-Esri-Demo/esri-demo.html
@@ -285,13 +285,19 @@
                 udSDKJS_ResizeScene(width, height, 0, 0);
               }
 
-              var v = context.camera.viewMatrix;
-              udSDKJS_SetMatrix("view", v[0],v[1],v[2],v[3],v[4],v[5],v[6],v[7],v[8],v[9],v[10],v[11],v[12],v[13],v[14],v[15]);
+              // async function
+              let setMatrix = async() => {
+                var v = context.camera.viewMatrix;
+                udSDKJS_SetMatrix("view", v[0],v[1],v[2],v[3],v[4],v[5],v[6],v[7],v[8],v[9],v[10],v[11],v[12],v[13],v[14],v[15]);
 
-              var v = context.camera.projectionMatrix;
-              udSDKJS_SetMatrix("projection", v[0],v[1],v[2],v[3],v[4],v[5],v[6],v[7],v[8],v[9],v[10],v[11],v[12],v[13],v[14],v[15]);
-              
-              udSDKJS_RenderQueue();
+                v = context.camera.projectionMatrix;
+                udSDKJS_SetMatrix("projection", v[0],v[1],v[2],v[3],v[4],v[5],v[6],v[7],v[8],v[9],v[10],v[11],v[12],v[13],v[14],v[15]);
+              };
+
+              // Call the function
+              setMatrix().then(
+                udSDKJS_RenderQueue()
+              );
 
               // Get memory address from the color buffer
               var ptr = udSDKJS_GetColourBuffer();
